# GrabKey

./: .clang-format  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
Examples/: CMakeLists.txt
Examples/src/: grabkey.c  grabkeypp.cpp
GrabKeyLib/: CMakeLists.txt
GrabKeyLib/grabkey/: CMakeLists.txt  GrabKeyConfig.cmake.in
GrabKeyLib/grabkey/include/: fd_monitor.h  terminal.h
GrabKeyLib/grabkey/src/: fd_monitor_epoll.c  fd_monitor_kqueue.c  terminal.c
GrabKeyLib/grabkeypp/: CMakeLists.txt  GrabKeyPpConfig.cmake.in
GrabKeyLib/grabkeypp/include/: IKeyParser.hpp  detailed_key.h  events_config.h  events_processor.h  fd_poller.h  fd_reader.h  kbd_key_parser.h  kbd_keys.h  kbd_reader.h  raw_mode.h
GrabKeyLib/grabkeypp/src/: detailed_key.cpp  events_processor_impl.cpp  fd_poller.cpp  fd_reader.cpp  kbd_key_parser.cpp  raw_mode.cpp
